--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <!-- Nav -->
-    <nav class="nav">
-        <div class="container">
-            <div class="logo ">
+    <nav class="nav pt-3">
+        <div class="w-100">
+            <div class="logo pt-3">
                 <img src="img/logo.png" class="img-responsive">
                 <a href="#">A'ROSA-JE</a>
             </div>
@@ -29,7 +29,7 @@
                     </li>
                 </ul>
             </div>
-            <span class="navTrigger">
+            <span class="navTrigger pt-3">
                 <i></i>
                 <i></i>
                 <i></i>
