--- a/profil.html
+++ b/profil.html
@@ -48,20 +48,22 @@
                                 <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="...">
                             </div>
                             <div class="col-lg-6 px-xl-10">
+                                <form>
                                 <div class="bg-secondary d-lg-inline-block py-1-9 px-1-9 px-sm-6 mb-1-9 rounded">
                                     <h3 class="h2 text-white mb-0">Julien Flusin</h3>
                                 </div>
                                 <ul class="list-unstyled mb-1-9">
-                                    <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Rôle:</span> Vendeur</li>
-                                    <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Email:</span> example@mail.com</li>
-                                    <li class="display-28"><span class="display-26 text-secondary me-2 font-weight-600">Phone:</span> Example</li>
+                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Rôle:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Email:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Phone:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Numéro d'adresse:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Rue:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Ville:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Code postal:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Pays:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-2 mb-xl-3 display-28"><button class="button"> Sauvegarder</button></li>
                                 </ul>
-                                <ul class="social-icon-style1 list-unstyled mb-0 ps-0">
-                                    <li><a href="#!"><i class="ti-twitter-alt"></i></a></li>
-                                    <li><a href="#!"><i class="ti-facebook"></i></a></li>
-                                    <li><a href="#!"><i class="ti-pinterest"></i></a></li>
-                                    <li><a href="#!"><i class="ti-instagram"></i></a></li>
-                                </ul>
+                            </form>
                             </div>
                         </div>
                     </div>
