--- a/index.html
+++ b/index.html
@@ -52,13 +52,15 @@
                 <i id="left" class="arrow bi bi-caret-left"></i>
                 <ul class="carousel">
                     <li class="card published">
-                        <i class="bi bi-megaphone-fill"></i>
+                        <i class="published-icon bi bi-megaphone-fill position-absolute"></i>
+                        <i class="environment-icon bi bi-house-door-fill position-absolute"></i>
                         <div data-bs-toggle="popover" data-bs-placement="top" data-bs-trigger="hover" data-bs-title="Description" data-bs-content="Description content" class="img">
                             <img src="img/img-1.jpg" alt="img" draggable="false">
                         </div>
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforUnpublishModal" data-bs-published="yes">Unpublish</button>
+                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>
                     </li>
                     <li class="card">
                         <div data-bs-toggle="popover" data-bs-placement="top" data-bs-trigger="hover" data-bs-title="Description" data-bs-content="Description content" class="img">
@@ -67,24 +69,29 @@
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforPublishModal" data-bs-published="no">Publish</button>
+                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>
                     </li>
                     <li class="card published">
-                        <i class="bi bi-megaphone-fill"></i>
+                        <i class="published-icon bi bi-megaphone-fill position-absolute"></i>
+                        <i class="environment-icon bi bi-sun-fill position-absolute"></i>
                         <div data-bs-toggle="popover" data-bs-placement="top" data-bs-trigger="hover" data-bs-title="Description" data-bs-content="Description content" class="img">
                             <img src="img/img-3.jpg" alt="img" draggable="false">
                         </div>
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforUnpublishModal" data-bs-published="yes">Unpublish</button>
+                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>   
                     </li>
                     <li class="card published">
-                        <i class="bi bi-megaphone-fill"></i>
+                        <i class="published-icon bi bi-megaphone-fill position-absolute"></i>
+                        <i class="environment-icon bi bi-house-door-fill position-absolute"></i>
                         <div data-bs-toggle="popover" data-bs-placement="top" data-bs-trigger="hover" data-bs-title="Description" data-bs-content="Description content" class="img">
                             <img src="img/img-4.jpg" alt="img" draggable="false">
                         </div>
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforUnpublishModal" data-bs-published="yes">Unpublish</button>
+                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>
                     </li>
                     <li class="card">
                         <div data-bs-toggle="popover" data-bs-placement="top" data-bs-trigger="hover" data-bs-title="Description" data-bs-content="Description content" class="img">
@@ -93,6 +100,7 @@
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforPublishModal" data-bs-published="no">Publish</button>
+                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>
                     </li>
                     <li class="card">
                         <div data-bs-toggle="popover" data-bs-placement="top" data-bs-trigger="hover" data-bs-title="Description" data-bs-content="Description content" class="img">
@@ -101,6 +109,7 @@
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforPublishModal" data-bs-published="no">Publish</button>
+                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>
                     </li>
                 </ul>
                 <i id="right" class="arrow bi bi-caret-right"></i>
