--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,7 +61,7 @@
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforUnpublishModal" data-bs-published="yes">Unpublish</button>
-                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>
+                        <span class="birthday position-absolute"><i class="fa-solid fa-seedling"></i><strong>2023</strong></span>
                     </li>
                     <li class="card">
                         <div data-bs-toggle="popover" data-bs-placement="top" data-bs-trigger="hover" data-bs-title="Description" data-bs-content="Description content" class="img">
@@ -69,7 +70,7 @@
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforPublishModal" data-bs-published="no">Publish</button>
-                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>
+                        <span class="birthday position-absolute"><i class="fa-solid fa-seedling"></i><strong>2023</strong></span>
                     </li>
                     <li class="card published">
                         <i class="published-icon bi bi-megaphone-fill position-absolute"></i>
@@ -80,7 +81,7 @@
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforUnpublishModal" data-bs-published="yes">Unpublish</button>
-                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>   
+                        <span class="birthday position-absolute"><i class="fa-solid fa-seedling"></i><strong>2023</strong></span>   
                     </li>
                     <li class="card published">
                         <i class="published-icon bi bi-megaphone-fill position-absolute"></i>
@@ -91,7 +92,7 @@
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforUnpublishModal" data-bs-published="yes">Unpublish</button>
-                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>
+                        <span class="birthday position-absolute"><i class="fa-solid fa-seedling"></i><strong>2023</strong></span>
                     </li>
                     <li class="card">
                         <div data-bs-toggle="popover" data-bs-placement="top" data-bs-trigger="hover" data-bs-title="Description" data-bs-content="Description content" class="img">
@@ -100,7 +101,7 @@
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforPublishModal" data-bs-published="no">Publish</button>
-                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>
+                        <span class="birthday position-absolute"><i class="fa-solid fa-seedling"></i><strong>2023</strong></span>
                     </li>
                     <li class="card">
                         <div data-bs-toggle="popover" data-bs-placement="top" data-bs-trigger="hover" data-bs-title="Description" data-bs-content="Description content" class="img">
@@ -109,7 +110,7 @@
                         <h2>my_plant_name</h2>
                         <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforPublishModal" data-bs-published="no">Publish</button>
-                        <span class="birthday position-absolute">Elle est née en <strong>2023 - {age}</strong></span>
+                        <span class="birthday position-absolute"><i class="fa-solid fa-seedling"></i><strong>2023</strong></span>
                     </li>
                 </ul>
                 <i id="right" class="arrow bi bi-caret-right"></i>
