--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+	<div class="login">
 	<div class="section">
 		<div class="container">
 			<div class="row full-height justify-content-center">
@@ -67,5 +68,6 @@
 	      	</div>
 	    </div>
 	</div>
+</div>
 </body>
 </html>
