--- a/profil.html
+++ b/profil.html
@@ -37,6 +37,7 @@
         </div>
     </nav>
     <!-- /Nav -->
+    <div class="profil">
     <section class="bg-light">
     <div class="container">
         <div class="row">
@@ -53,15 +54,15 @@
                                     <h3 class="h2 text-white mb-0">Julien Flusin</h3>
                                 </div>
                                 <ul class="list-unstyled mb-1-9">
-                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Rôle:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
-                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Email:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
-                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Phone:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
-                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Numéro d'adresse:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
-                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Rue:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
-                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Ville:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
-                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Code postal:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
-                                    <li class="mb-2 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Pays:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
-                                    <li class="mb-2 mb-xl-3 display-28"><button class="button"> Sauvegarder</button></li>
+                                    <li class="mb-4 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Rôle:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-4 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Email:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-4 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Téléphone:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-4 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">N°Adresse:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-4 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Rue:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-4 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Ville:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-4 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">ZIP Code:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-4 mb-xl-3 display-28"><div style="display: inline-flex;"><span class="display-26 text-secondary me-2 font-weight-600">Pays:</span><div class="form__group field"><input type="input" class="form__field" required=""><label for="name" class="form__label"></label></div></div></li>
+                                    <li class="mb-4 mb-xl-3 display-28 center my-3"><button class="button"> Sauvegarder</button></li>
                                 </ul>
                             </form>
                             </div>
@@ -72,5 +73,6 @@
         </div>
     </div>
 </section>
+</div>
 </body>
 </html>
