--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
                 <div class="mb-3">
                     <label for="photo-text" class="col-form-label">Upload Photo:</label>
                     <br>
-                    <input type="file" id="inp" name="myImage" accept="image/png, image/gif, image/jpeg" />
-                    <br>
+                    <input type="file" id="inp" name="myImage" accept="image/png, image/jpeg, image/jpg" />                    <br>
                     <img class="mt-3" id="img" height="150">
                 </div>
               </form>
