--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A'rosa-Je FRONT</title>
+    <title>A'ROSA-JE</title>
 </head>
 <body>
     <!-- Nav -->
@@ -16,12 +16,15 @@
         <div class="w-100">
             <div class="logo pt-3">
                 <img src="img/logo.png" class="img-responsive">
-                <a href="#">A'ROSA-JE</a>
+                <a href="index.html">A'ROSA-JE</a>
             </div>
             <div id="mainListDiv" class="main_list">
                 <ul class="navlinks">
                     <li class="text-center">
-                        <a href="#" class="text-uppercase">Profile</a>
+                      <a href="login.html" class="text-uppercase">Login</a>
+                    </li>
+                    <li class="text-center">
+                        <a href="profil.html" class="text-uppercase">Profil</a>
                     </li>
                     <li class="text-center">            
                         <button type="button" class="btn rounded btn-upload text-uppercase" data-bs-toggle="modal" data-bs-target="#uploadModal" data-bs-owner-id="@upload-owner-id">
