--- a/profil.html
+++ b/profil.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style3.css">
+<link rel="stylesheet" href="style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A'rosa-Je FRONT</title>
+    <title>A'ROSA-JE</title>
 </head>
 <body>
     <!-- Nav -->
@@ -15,12 +15,12 @@
         <div class="w-100">
             <div class="logo pt-3">
                 <img src="img/logo.png" class="img-responsive">
-                <a href="#">A'ROSA-JE</a>
+                <a href="index.html">A'ROSA-JE</a>
             </div>
             <div id="mainListDiv" class="main_list">
                 <ul class="navlinks">
                     <li class="text-center">
-                        <a href="#" class="text-uppercase">Profile</a>
+                        <a href="profil.html" class="text-uppercase">Profil</a>
                     </li>
                     <li class="text-center">            
                         <button type="button" class="btn rounded btn-upload text-uppercase" data-bs-toggle="modal" data-bs-target="#uploadModal" data-bs-owner-id="@upload-owner-id">
@@ -74,5 +74,7 @@
     </div>
 </section>
 </div>
+
+
 </body>
 </html>
