--- a/login.html
+++ b/login.html
@@ -41,13 +41,17 @@
 								<div class="card-back">
 									<div class="center-wrap">
 										<div class="section text-center">
-											<h4 class="mb-3 pb-3">Sign Up</h4>
+											<h4 class="mb-3 pb-3">Création compte</h4>
 											<div class="form-group">
-												<input type="text" class="form-style" placeholder="Username">
+												<input type="text" class="form-style" placeholder="Nom">
 												<i class="input-icon uil uil-user"></i>
 											</div>	
 											<div class="form-group mt-2">
-												<input type="tel" class="form-style" placeholder="Phone Number">
+												<input type="text" class="form-style" placeholder="Prénom">
+												<i class="input-icon uil uil-user"></i>
+											</div>	
+											<div class="form-group mt-2">
+												<input type="tel" class="form-style" placeholder="Téléphone">
 												<i class="input-icon uil uil-phone"></i>
 											</div>	
                       <div class="form-group mt-2">
@@ -55,10 +59,10 @@
 												<i class="input-icon uil uil-at"></i>
 											</div>
 											<div class="form-group mt-2">
-												<input type="password" class="form-style" placeholder="Password">
+												<input type="password" class="form-style" placeholder="Mot de passe">
 												<i class="input-icon uil uil-lock-alt"></i>
 											</div>
-											<a href="" class="btn mt-4">Register</a>
+											<a href="" class="btn mt-4">Enregistrer</a>
 				      					</div>
 			      					</div>
 			      				</div>
