--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 				<div class="col-12 text-center align-self-center py-5">
 					<div class="section pb-5 pt-5 pt-sm-2 text-center">
 						<h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
-			          	<input class="checkbox" type="checkbox" id="reg-log" name="reg-log"/>
+			          	<input class="checkbox" type="checkbox" id="reg-log" name="reg-log" href=""/>
 			          	<label for="reg-log"></label>
 						<div class="card-3d-wrap mx-auto">
 							<div class="card-3d-wrapper">
@@ -35,34 +35,6 @@
 											</div>
 											<a href="" class="btn mt-4">Login</a>
                       <p class="mb-0 mt-4 text-center"><a href="" class="link">Forgot your password?</a></p>
-				      					</div>
-			      					</div>
-			      				</div>
-								<div class="card-back">
-									<div class="center-wrap">
-										<div class="section text-center">
-											<h4 class="mb-3 pb-3">Création compte</h4>
-											<div class="form-group">
-												<input type="text" class="form-style" placeholder="Nom">
-												<i class="input-icon uil uil-user"></i>
-											</div>	
-											<div class="form-group mt-2">
-												<input type="text" class="form-style" placeholder="Prénom">
-												<i class="input-icon uil uil-user"></i>
-											</div>	
-											<div class="form-group mt-2">
-												<input type="tel" class="form-style" placeholder="Téléphone">
-												<i class="input-icon uil uil-phone"></i>
-											</div>	
-                      <div class="form-group mt-2">
-												<input type="email" class="form-style" placeholder="Email">
-												<i class="input-icon uil uil-at"></i>
-											</div>
-											<div class="form-group mt-2">
-												<input type="password" class="form-style" placeholder="Mot de passe">
-												<i class="input-icon uil uil-lock-alt"></i>
-											</div>
-											<a href="" class="btn mt-4">Enregistrer</a>
 				      					</div>
 			      					</div>
 			      				</div>
