--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
 				<div class="col-12 text-center align-self-center py-5">
 					<div class="section pb-5 pt-5 pt-sm-2 text-center">
 						<h6 class="mb-0 pb-3"><span>Sign Up </span><span>Login</span></h6>
-			          	<input class="checkbox" type="checkbox" id="reg-log" name="reg-log" href=""/>
+			          	<a class="checkbox" type="checkbox" id="reg-log" name="reg-log" href=""></a>
 			          	<label for="reg-log"></label>
 						<div class="card-3d-wrap mx-auto">
 							<div class="card-3d-wrapper">
