--- a/login.html
+++ b/login.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>A'ROSA-JE</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	
-	<div class="login">
-	<div class="section">
-		<div class="container">
-			<div class="row full-height justify-content-center">
-				<div class="col-12 text-center align-self-center py-5">
-					<div class="section pb-5 pt-5 pt-sm-2 text-center">
-						<h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
-						<input class="checkbox" type="checkbox" id="reg-log" name="reg-log" onclick="window.location='https://google.com'"/>
-			          	<label for="reg-log"></label>
-						<div class="card-3d-wrap mx-auto">
-							<div class="card-3d-wrapper">
-								<div class="card-front">
-									<div class="center-wrap">
-										<div class="section text-center">
-											<h4 class="mb-4 pb-3">Log In</h4>
-											<div class="form-group">
-												<input type="email" class="form-style" placeholder="Email">
-												<i class="input-icon uil uil-at"></i>
-											</div>	
-											<div class="form-group mt-2">
-												<input type="password" class="form-style" placeholder="Password">
-												<i class="input-icon uil uil-lock-alt"></i>
-											</div>
-											<a href="" class="btn mt-4">Login</a>
-                      <p class="mb-0 mt-4 text-center"><a href="" class="link">Forgot your password?</a></p>
-				      					</div>
-			      					</div>
-			      				</div>
-			      			</div>
-			      		</div>
-			      	</div>
-		      	</div>
-	      	</div>
-	    </div>
-	</div>
-</div>
-</body>
+<html lang="fr">
+	<head>
+		<title>A'ROSA-JE</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<div class="login">
+			<div class="section">
+				<div class="container">
+					<div class="row full-height justify-content-center">
+						<div class="col-12 text-center align-self-center py-5">
+							<div class="section pb-5 pt-5 pt-sm-2 text-center">
+								<h6 class="mb-0 pb-3"><span>Se connecter</span><span>S'enregistrer</span></h6>
+								<input class="checkbox" type="checkbox" id="reg-log" name="reg-log" onclick="window.location='/signup.html'"/>
+								<label for="reg-log"></label>
+								<div class="card-3d-wrap mx-auto">
+									<div class="card-3d-wrapper">
+										<div class="card-front">
+											<form class="center-wrap" action="https://www.google.com" method="get">
+												<div class="section text-center">
+													<h4 class="mb-4 pb-3">Se connecter</h4>
+													<div class="form-group">
+														<input type="email" class="form-style" placeholder="Email" required>
+														<i class="input-icon uil uil-at"></i>
+													</div>	
+													<div class="form-group mt-2">
+														<input type="password" class="form-style" placeholder="Mot de passe" required>
+														<i class="input-icon uil uil-lock-alt"></i>
+													</div>
+													<button type="submit" class="btn mt-4">Se connecter</a>
+												</div>
+											</form>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
