--- a/signup.html
+++ b/signup.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>A'ROSA-JE</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	
-	<div class="login">
-	<div class="section">
-		<div class="container">
-			<div class="row full-height justify-content-center">
-				<div class="col-12 text-center align-self-center py-5">
-					<div class="section pb-5 pt-5 pt-sm-2 text-center">
-						<h6 class="mb-0 pb-3"><span>Sign Up </span><span>Login</span></h6>
-			          	<input class="checkbox" type="checkbox" id="reg-log" name="reg-log" onclick="window.location='https://google.com'"/>
-			          	<label for="reg-log"></label>
-						<div class="card-3d-wrap mx-auto">
-							<div class="card-3d-wrapper">
-                                <div class="card-front">
-                                    <div class="center-wrap">
-                                        <div class="section text-center">
-                                            <h4 class="mb-3 pb-3">Création compte</h4>
-                                            <div class="form-group">
-                                                <input type="text" class="form-style" placeholder="Nom">
-                                                <i class="input-icon uil uil-user"></i>
-                                            </div>	
-                                            <div class="form-group mt-2">
-                                                <input type="text" class="form-style" placeholder="Prénom">
-                                                <i class="input-icon uil uil-user"></i>
-                                            </div>	
-                                            <div class="form-group mt-2">
-                                                <input type="tel" class="form-style" placeholder="Téléphone">
-                                                <i class="input-icon uil uil-phone"></i>
-                                            </div>	
-                                <div class="form-group mt-2">
-                                                <input type="email" class="form-style" placeholder="Email">
-                                                <i class="input-icon uil uil-at"></i>
-                                            </div>
-                                            <div class="form-group mt-2">
-                                                <input type="password" class="form-style" placeholder="Mot de passe">
-                                                <i class="input-icon uil uil-lock-alt"></i>
-                                            </div>
-                                            <a href="" class="btn mt-4">Enregistrer</a>
+<html lang="fr">
+    <head>
+        <title>A'ROSA-JE</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="login">
+            <div class="section">
+                <div class="container">
+                    <div class="row full-height justify-content-center">
+                        <div class="col-12 text-center align-self-center py-5">
+                            <div class="section pb-5 pt-5 pt-sm-2 text-center">
+                                <h6 class="mb-0 pb-3"><span>Se connecter</span><span>S'enregistrer</span></h6>
+                                <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" onclick="window.location='/login.html'" checked/>
+                                <label for="reg-log"></label>
+                                <div class="card-3d-wrap mx-auto">
+                                    <div class="card-3d-wrapper">
+                                        <div class="card-front">
+                                            <form class="center-wrap" action="https://www.google.com" method="get">
+                                                <div class="section text-center">
+                                                    <h4 class="mb-3 pb-3">Création compte</h4>
+                                                    <div class="form-group">
+                                                        <input type="text" class="form-style" placeholder="Nom" required>
+                                                        <i class="input-icon uil uil-user"></i>
+                                                    </div>	
+                                                    <div class="form-group mt-2">
+                                                        <input type="text" class="form-style" placeholder="Prénom" required>
+                                                        <i class="input-icon uil uil-user"></i>
+                                                    </div>	
+                                                    <div class="form-group mt-2">
+                                                        <input type="email" class="form-style" placeholder="Email" required>
+                                                        <i class="input-icon uil uil-at"></i>
+                                                    </div>
+                                                    <div class="form-group mt-2">
+                                                        <input type="password" class="form-style" placeholder="Mot de passe" required>
+                                                        <i class="input-icon uil uil-lock-alt"></i>
+                                                    </div>
+                                                    <button type="submit" class="btn mt-4">S'enregistrer</a>
+                                                </div>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
@@ -55,6 +52,5 @@
                 </div>
             </div>
         </div>
-    </div>
-    </div>
-</body></html>
+    </body>
+</html>
