--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             </div>
             <div id="mainListDiv" class="main_list">
                 <ul class="navlinks">
-                    <li class="text-center">
+                    <li class="text-center  position-relative">
                       <a href="mailbox.html" class="text-uppercase"><i id="envelope-icon" class="fa-solid fa-envelope"></i></a>
+                      <div class="new-mail-alarm position-absolute"></div>
                     </li>
                     <li class="text-center">
                       <a href="login.html" class="text-uppercase"><i class="fas fa-sign-out-alt"></i></a>
