Modified some style

--- a/mailbox.html
+++ b/mailbox.html
@@ -57,7 +57,7 @@
 
         <div class="row text-center gx-5 gy-5 mx-3">
             <div class="col-12 col-sm-12 col-md-6 col-lg-4">
-                <div class="card m-auto read" >
+                <div class="card m-auto unread" >
                     <img src="img/img-1.jpg" alt="img-plant_id" draggable="false">
                     <div class="card-body">
                         <h3 class="card-title">from_user</h3>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4">
-                <div class="card m-auto read" >
+                <div class="card m-auto unread" >
                     <img src="img/img-3.jpg" alt="img-plant_id" draggable="false">
                     <div class="card-body">
                         <h3 class="card-title">from_user</h3>
